--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,15 @@
+@use './assets/styles/variables';
+@use './assets/styles/mixins';
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
 .container {
   width: 100%;
   height: 100%;
