--- a/src/components/WorkShiftsHistory/styles.module.scss
+++ b/src/components/WorkShiftsHistory/styles.module.scss
@@ -3,10 +3,13 @@
 
 .container {
   display: flex;
+  flex-direction: column;
   width: 100%;
-  height: 100%;
   border-radius: 3px;
   color: variables.$color-palette-blue;
+  padding: 10px;
+  overflow-y: hidden;
+  height: 100%;
 }
 
 .heading {
@@ -15,4 +18,15 @@
   width: 100%;
   padding: 10px;
   @include mixins.typography-m;
+}
+
+.list {
+  width: 100%;
+  overflow-y: scroll;
+  padding: 15px;
+  height: 100%;
+  border-left: 1px solid variables.$color-palette-white;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
