--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -31,6 +31,7 @@ body {
   display: flex;
   align-items: center;
   height: 100dvh;
+  position: relative;
 }
 #root::-webkit-scrollbar {
   display: none;
@@ -97,3 +98,10 @@ input:-webkit-autofill:focus {
   transition: background-color 0s 600000s, color 0s 600000s !important;
 }
 
+@media screen and (max-width: 400px) {
+  html,
+  body,
+  div[id='root'] {
+    overflow-x: auto;
+  }
+}
