--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -1,3 +1,7 @@
+@use '../../assets/styles/variables';
+@use '../../assets/styles/mixins';
+
+
 .container {
   display: flex;
   position: absolute;
@@ -8,4 +12,6 @@
   width: 100%;
   height: 100%;
   backdrop-filter: blur(2px);
+  top: 0;
+  left: 0;
 }
