--- a/src/components/WorkShiftsHistory/styles.module.scss
+++ b/src/components/WorkShiftsHistory/styles.module.scss
@@ -30,3 +30,18 @@
     display: none;
   }
 }
+
+@media screen and (max-width: 1000px) {
+  .container {
+    max-height: 80%;
+    min-height: 30%;
+    flex: 1 1;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .list {
+    padding: 5px;
+    max-height: 100%;
+  }
+}
