--- a/src/pages/WorkShifts/styles.module.scss
+++ b/src/pages/WorkShifts/styles.module.scss
@@ -18,6 +18,7 @@
   flex-direction: column;
   gap: 15px;
   min-width: 300px;
+  max-width: 320px;
 }
 
 .inputContainer {
@@ -33,3 +34,29 @@
   justify-content: center;
   gap: 15px;
 }
+
+.tabs {
+  display: flex;
+  width: 300px;
+  gap: 15px;
+  margin: 15px 0;
+}
+
+@media screen and (max-width: 1180px) {
+  .container {
+    flex-direction: column;
+  }
+  .formWrapper {
+    align-items: center;
+    max-height: 90dvh;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .container {
+    padding: 5px;
+  }
+}
+
+
+
