--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -107,9 +107,10 @@
   transform: translateY(-4rem);
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .main {
-    overflow-y: auto;
+    justify-content:flex-start;
+    padding: 15px 0 0 0;
   }
 }
 
