--- a/src/pages/CountSalary/styles.module.scss
+++ b/src/pages/CountSalary/styles.module.scss
@@ -25,3 +25,33 @@
   width: 100%;
 }
 
+.tabs {
+  padding: 10px 0 0 0;
+  display: flex;
+  width: 80%;
+  max-width: 320px;
+  gap: 15px;
+}
+
+@media screen and (max-width: 1120px) {
+  .container {
+    padding: 5px;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    padding: 0;
+  }
+  .salaryContainer {
+    margin: 0;
+    padding: 10px 10px 0 10px;
+    height: min-content;
+  }
+  .tabs {
+    padding: 0;
+  }
+}
