--- a/src/components/NotifyService/styles.module.scss
+++ b/src/components/NotifyService/styles.module.scss
@@ -27,6 +27,9 @@
   transition: transform 500ms;
 }
 
-@media screen and (max-width:320px) {
-
+@media screen and (max-width:600px) {
+  .container {
+    right: 0;
+    bottom: 0;
+  }
 }
