--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -13,6 +13,7 @@ $color-palette-blue: #547CFB;
 $color-palette-green: #009A63;
 $color-palette-error: #E32636;
 $color-palette-input-color-task: #2f2f37;
+$color-palette-modal-content-background: #1c1c21;
 $color-palette-input-color-auth: rgba(255, 255, 255, 0.1);
 $color-palette-border: rgba(255, 255, 255, 0.2);
 $color-palette-icon:rgba(255, 255, 255, 0.5);
