--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -3,7 +3,6 @@
 
 
 .container {
-  display: flex;
   position: absolute;
   align-items: center;
   justify-content: center;
@@ -14,4 +13,27 @@
   backdrop-filter: blur(2px);
   top: 0;
   left: 0;
+  display: flex;
+}
+
+.enter {
+  opacity: 0;
+}
+.enterActive {
+  opacity: 1;
+  transition: opacity 200ms;
+}
+.exit {
+  opacity: 1;
+}
+.exitActive {
+  opacity: 0;
+  transition: opacity 200ms;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    align-items: flex-start;
+    padding: 80px 0 0 0;
+  }
 }
