--- a/src/pages/WorkShifts/styles.module.scss
+++ b/src/pages/WorkShifts/styles.module.scss
@@ -1,3 +1,6 @@
+@use '../../assets/styles/variables';
+@use '../../assets/styles/mixins';
+
 .container {
   width: 100%;
   height: 100%;
@@ -11,28 +14,6 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  min-width: 300px;
-  max-width: 320px;
-}
-
-.inputContainer {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-
-.buttonsContainer {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  justify-content: center;
-  gap: 15px;
 }
 
 .tabs {
