Добавил редактирование смены

--- a/src/components/UpdateWorkShiftModal/styles.module.scss
+++ b/src/components/UpdateWorkShiftModal/styles.module.scss
@@ -1,2 +1,10 @@
 @use '../../assets/styles/variables';
 @use '../../assets/styles/mixins';
+
+.container {
+  background: variables.$color-palette-modal-content-background;
+  padding: 15px;
+  border-radius: 10px;
+  min-height: 610px;
+  min-width: 310px;
+}
