--- a/src/pages/Login/styles.module.scss
+++ b/src/pages/Login/styles.module.scss
@@ -3,6 +3,7 @@
 
 
 .container {
+  max-width: 300px;
 }
 
 .link {
@@ -14,4 +15,9 @@
     opacity: .5;
     transition: opacity ease .5s;
   }
+}
+
+.protfolio {
+  text-align: center;
+  margin-bottom: 10px;
 }
