Добавил контроллер для изменения и получения коэффициентов с сервера

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -9,7 +9,7 @@ $font-roboto: 'Roboto', sans-serif;
 $color-palette-white: #FFFFFF;
 $color-palette-black: #000000;
 $color-palette-gray: #7A7A7A;
-$color-palette-blue: #FFFFFF;
+$color-palette-blue: #547CFB;
 $color-palette-green: #009A63;
 $color-palette-error: #E32636;
 $color-palette-input-color-task: #2f2f37;
