Добавил изменение коэффициентов через апи, корректное отображение подсчета кассы на телефоне

--- a/src/components/CountCaseItem/styles.module.scss
+++ b/src/components/CountCaseItem/styles.module.scss
@@ -4,8 +4,8 @@
 .container {
   display: flex;
   border: 1px solid $color-palette-white;
-  padding: 10px;
-  border-radius: 3px;
+  padding: 5px;
+  gap: 10px;
 }
 
 .incorrect {
