--- a/src/components/UpdateCoefficientsModal/styles.module.scss
+++ b/src/components/UpdateCoefficientsModal/styles.module.scss
@@ -3,8 +3,10 @@
 
 .container {
   background: variables.$color-palette-modal-content-background;
-  padding: 10px;
+  padding: 15px;
   border-radius: 10px;
   min-height: 610px;
   min-width: 310px;
+  display: flex;
+  justify-content: center;
 }
