--- a/src/pages/CountCase/styles.module.scss
+++ b/src/pages/CountCase/styles.module.scss
@@ -5,16 +5,17 @@
 .container {
   max-height: 100dvh;
   display: flex;
-  align-items: center;
   justify-content: center;
   gap: 10px;
+  padding: 5px;
+  width: 100%;
+  height: 100%;
 }
 
 .list {
   max-height: 90%;
   width: 100%;
   overflow-y: scroll;
-  padding: 15px;
   height: 100%;
   border-left: 1px solid variables.$color-palette-white;
   &::-webkit-scrollbar {
@@ -22,6 +23,23 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+.form {
+  max-width: 400px;
+}
 
+@media screen and (max-width: 760px) {
+ .container {
+   flex-direction: column;
+   align-items: center;
+ }
+  .tabs {
+    width: 300px;
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .form {
+    min-width: 300px;
+  }
 }
