--- a/src/pages/CountCase/styles.module.scss
+++ b/src/pages/CountCase/styles.module.scss
@@ -6,7 +6,7 @@
   max-height: 100dvh;
   display: flex;
   justify-content: center;
-  gap: 10px;
+  gap: 20px;
   padding: 5px;
   width: 100%;
   height: 100%;
@@ -21,6 +21,9 @@
   &::-webkit-scrollbar {
     display: none;
   }
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .form {
@@ -35,6 +38,10 @@
   .tabs {
     width: 300px;
     display: flex;
+  }
+
+  .list {
+    border-left: none;
   }
 }
 
