Добавил изменение коэффициентов через апи, корректное отображение подсчета кассы на телефоне

--- a/src/components/CountCaseItem/styles.module.scss
+++ b/src/components/CountCaseItem/styles.module.scss
@@ -6,6 +6,13 @@
   border: 1px solid $color-palette-white;
   padding: 5px;
   gap: 10px;
+  flex-wrap: wrap;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .incorrect {
