--- a/src/components/WorkShiftHistoryItem/styles.module.scss
+++ b/src/components/WorkShiftHistoryItem/styles.module.scss
@@ -13,6 +13,7 @@
   gap: 10px;
   cursor: pointer;
   min-height: 80px;
+  justify-content: space-between;
 }
 
 .wrapper {
@@ -22,8 +23,9 @@
   align-items: center;
   gap: 10px;
   padding: 10px;
-  max-width: 110px;
+  max-width: 180px;
   min-width: 70px;
+  width: 100%;
 }
 
 .listItemPropName {
@@ -32,11 +34,18 @@
   text-align: center;
   align-items: flex-start;
   min-height: 25px;
+  max-width: 180px;
+  width: 100%;
+  justify-content: center;
 }
 
 .listItemPropValue {
   @include mixins.typography-x;
   color: variables.$color-palette-blue;
+  max-width: 150px;
+  width: 100%;
+  text-align: center;
+  min-width: 70px;
 }
 
 .removeButtonContainer {
@@ -63,6 +72,12 @@
   min-width: 30px;
   min-height: 30px;
   border-radius: 50%;
+}
+
+@media screen and (max-width: 1330px) {
+  .listItemPropValue {
+    min-width: 50px;
+  }
 }
 
 @media screen and (max-width: 830px) {
