Рефакторинг функции расчета кассы

--- a/src/pages/CountCase/styles.module.scss
+++ b/src/pages/CountCase/styles.module.scss
@@ -27,7 +27,12 @@
 }
 
 .form {
-  max-width: 400px;
+  max-width: 300px;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 100%;
+  gap: 10px;
 }
 
 @media screen and (max-width: 760px) {
