--- a/src/components/NavigationLinks/styles.module.scss
+++ b/src/components/NavigationLinks/styles.module.scss
@@ -14,7 +14,7 @@
 }
 
 .linkActive {
-  color: variables.$color-palette-blue;
+  color: variables.$color-palette-green;
 }
 
 @media screen and (max-width: 760px) {
